iron-gallery/iron-gallery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
  name: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: iron-gallery
    spec:
      containers:
      - image: kodekloud/irongallery:2.0
        name: irongallery
        volumeMounts:
        - name: config
          mountPath: /usr/share/nginx/html/data
        - name: images
          mountPath: /usr/share/nginx/html/uploads
        resources:
          limits:
            memory: "100Mi"
            cpu: "50m"
      volumes:
      - name: config
        emptyDir: {}
      - name: images
        emptyDir: {}
