iron-gallery/iron-gallery-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: iron-gallery-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30099
  type: NodePort
  selector:
    run: iron-gallery
status:
  loadBalancer: {}
