iron-gallery/ingress-space.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iron-gallery-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: iron-gallery-braavos.com
    http:
      paths:
      - path: /
        backend:
          serviceName: iron-gallery-service
          servicePort: 30099
      - path: /
        backend:
          serviceName: iron-gallery-service
          servicePort: 80
