iron-gallery/netpol-iron-gallery.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iron-gallery-firewall
spec:
  podSelector:
    matchLabels:
      db: mariadb
  policyTypes:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: iron-gallery
    ports:
      - protocol: TCP
        port: 3306
